# carnopy

./: .gitattributes  .gitignore  AGENTS.md  CONTRIBUTING.md  LICENSE  README.md  hli.ipynb  pyproject.toml
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  SECURITY.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug-report.yml  config.yml  feature-request.yml  scientific-discrepancy.yml
.github/workflows/: ci.yml  publish.yml
configs/: cyclopentane_vapor_fraction_pressure.yaml  model_sweep_example.yaml  property_table_example.yaml  saturation_table_example.yaml  vapor_mass_fraction_table_example.yaml
docs/: architecture.md  configuration.md  data-policy.md  releasing.md  visualization.md
graphify-out/: GRAPH_REPORT.md  graph.html  graph.json
scripts/: __init__.py  check_distribution.py  hash_distributions.py  local_gate.sh  preflight.py  smoke_installed.py  verify_index_release.py
src/carnopy/: __init__.py  __main__.py  _execution.py  _version.py  api.py  cli.py  inspection.py  pipeline.py  provenance.py  results.py
src/carnopy/app/: __init__.py  launcher.py  protocol.py  window.py  worker.py  workspace.py
src/carnopy/backends/: __init__.py  base.py  coolprop.py  coolprop_models.py
src/carnopy/config/: __init__.py  io.py  models.py  normalize.py  outputs.py  sweep.py  visualization.py
src/carnopy/domain/: __init__.py  failures.py  phases.py  properties.py  units.py
src/carnopy/generation/: __init__.py  common.py  property_table.py  saturation_table.py  vapor_mass_fraction_table.py
src/carnopy/outputs/: __init__.py  layout.py  metadata.py  reports.py  schemas.py  writers.py
src/carnopy/preparation/: __init__.py  arrays.py  derived.py  fields.py  layout.py  models.py  pipeline.py  reference.py  reporting.py  rows.py  scenarios.py  source.py
src/carnopy/sampling/: __init__.py  generate.py  models.py
src/carnopy/sweeps/: __init__.py  comparison.py  layout.py  normalize.py  pipeline.py  plots.py
src/carnopy/templates/: __init__.py  full_reference.yaml  model_sweep.yaml  preparation.yaml  property_table.yaml  saturation_table.yaml  vapor_mass_fraction_table.yaml
src/carnopy/visualization/: __init__.py  automation.py  config_io.py  configuration.py  curves.py  diagrams.py  export.py  fields.py  heatmaps.py  inspect.py  io.py  models.py  plots.py  render.py  requests.py  selection.py  series.py  units.py  xy.py
tests/: conftest.py  test_api.py  test_app_launcher.py  test_app_window.py  test_app_worker.py  test_app_workspace.py  test_backend.py  test_cli.py  test_config.py  test_coolprop_models.py  test_model_sweeps.py  test_outputs.py  test_packaging_metadata.py  test_plot_inspect_batch.py  test_preparation.py  test_properties.py  test_property_table.py  test_provenance.py  test_release_tools.py  test_sampling.py  test_saturation_table.py  test_scientific_regressions.py  test_templates.py  test_units.py  test_vapor_mass_fraction_table.py  test_visualization_automation.py  test_visualization_diagrams.py  test_visualization_foundation.py  test_visualization_io.py  test_visualization_plots.py  test_workflows.py
tests/fixtures/: property_table.yaml  saturation_table.yaml  vapor_mass_fraction_table.yaml
