[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "carnopy"
dynamic = ["version"]
description = "Synthetic thermophysical property dataset generation from thermodynamic databases and simulation backends for physics-informed ML surrogate models."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Göran Cem Alpay" }]
keywords = [
  "thermodynamics",
  "fluid properties",
  "thermophysical properties",
  "dataset generation",
  "scientific computing",
  "machine learning",
  "surrogate modeling",
  "CoolProp",
]
dependencies = [
  "CoolProp>=7.2",
  "numpy>=2.0",
  "pandas>=2.2",
  "pyarrow>=16",
  "pydantic>=2.8",
  "typer>=0.12",
  "PyYAML>=6.0",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Science/Research",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Scientific/Engineering :: Physics",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Typing :: Typed",
]

[project.urls]
Repository = "https://github.com/gcalpay/carnopy"
Documentation = "https://github.com/gcalpay/carnopy#readme"
Issues = "https://github.com/gcalpay/carnopy/issues"
Releases = "https://github.com/gcalpay/carnopy/releases"

[project.optional-dependencies]
viz = [
  "matplotlib>=3.8",
]
ml = [
  "safetensors>=0.4.5",
]
all = [
  "matplotlib>=3.8",
  "safetensors>=0.4.5",
]

[dependency-groups]
test = [
  "pytest>=8",
  "tomli>=2; python_version < '3.11'",
]
lint = [
  "ruff>=0.9",
]
type = [
  "mypy>=1.13",
  "pandas-stubs>=2.2",
]
release = [
  "build>=1.2",
  "twine>=6",
]
dev = [
  { include-group = "test" },
  { include-group = "lint" },
  { include-group = "type" },
]

[project.scripts]
carnopy = "carnopy.__main__:main"

[tool.hatch.version]
path = "src/carnopy/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/carnopy"]

[tool.hatch.build.targets.sdist]
include = [
  "/AGENTS.md",
  "/LICENSE",
  "/README.md",
  "/configs",
  "/pyproject.toml",
  "/scripts",
  "/src",
  "/tests",
  "/uv.lock",
]
exclude = [
  "/build",
  "/dist",
  "/figures",
  "/outputs",
]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.10"
strict = true
files = ["src/carnopy"]
warn_unused_configs = true

[[tool.mypy.overrides]]
module = [
  "CoolProp",
  "CoolProp.*",
  "yaml",
  "pyarrow",
  "pyarrow.*",
  "matplotlib",
  "matplotlib.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
